--- a/_site.yml
+++ b/_site.yml
@@ -13,6 +13,7 @@ collections:
     share: [twitter]
 output_dir: "docs"
 exclude: "README.md"
+theme: mizer.css
 navbar:
   right:
     - text: "Publications"
@@ -22,5 +23,4 @@ navbar:
       
 output: 
   distill::distill_article:
-    css: styles.css
     toc_depth: 2
