--- a/_site.yml
+++ b/_site.yml
@@ -18,6 +18,8 @@ navbar:
   right:
     - text: "mizer home"
       href: https://sizespectrum.org/mizer/
+    - icon: fa fa-rss
+      href: index.xml
       
 output: 
   distill::distill_article:
