--- a/_site.yml
+++ b/_site.yml
@@ -18,8 +18,12 @@ navbar:
   right:
     - text: "mizer home"
       href: https://sizespectrum.org/mizer/
-    - icon: fa fa-rss
+    - icon: "fab fa-twitter fa-lg"
+      href: https://twitter.com/mizer_model
+    - icon: fa fa-rss fa-lg
       href: index.xml
+    - icon: "fab fa-github fa-lg"
+      href: https://github.com/sizespectrum/mizerBlog
       
 output: 
   distill::distill_article:
