--- a/_site.yml
+++ b/_site.yml
@@ -11,6 +11,9 @@ twitter:
   site: "@mizer_model"
 collections:
   posts:
+    disqus: 
+      shortname: mizer
+      hidden: false
     share: [twitter]
 output_dir: "docs"
 exclude: "README.md"
